--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel docs/index.html",
-    "build": "parcel build docs/index.html --public-url ./",
-    "deploy": "gh-pages -d dist"
+    "build": "parcel build docs/index.html --public-url /cool-iphone/"
   },
   "keywords": [],
   "homepage": "https://mstyslavsoroka.github.io/cool_iphone/",
