--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel docs/index.html",
-    "build": "parcel build docs/index.html --public-url /cool-iphone/"
+    "start": "parcel docs/index.html"
   },
   "keywords": [],
   "homepage": "https://mstyslavsoroka.github.io/cool_iphone/",
